--- a/index.html
+++ b/index.html
@@ -78,20 +78,23 @@ ul {
 
 		<h3>Course List <button class="arrow"><i class="fa fa-chevron-right" aria-hidden="true"></i></button></h3>
 		<div class="expanded-info">
+		<ul>Introduction to Agile Project Management</ul>
+		<ul>Introduction to Database Systems</ul>
+		<ul>Calculus Based Statistics for Engineers</ul>
+		<ul>Introduction to Data Visualization</ul>
+		<ul>Deep Learning</ul>
 		<ul>Machine Learning</ul>
 		<ul>Natural Language Processing</ul>
 		<ul>Cloud Computing and Big Data</ul>
 		<ul>Artificial Intelligence</ul>
-		<ul>Introduction to Database Systems</ul>
-		<ul>Introduction to Agile Project Management</ul>
 		<ul>Advanced Programming in C/C++</ul>
 		<ul>Computer Science Theory</ul>
 		<ul>Data Structures in Java</ul>
-		<ul>Calculus Based Statistics for Engineers</ul>
 	</div>
 
 		<h3>Technical Skills <button class="arrow"><i class="fa fa-chevron-right" aria-hidden="true"></i></button></h3>
 		<div class="expanded-info">
+		<ul>JIRA</ul>
 		<ul>Python</ul>
 		<ul>Java</ul>
 		<ul>Javascript (Angular, Node, React)</ul>
@@ -105,14 +108,21 @@ ul {
 
 	<div class="main-col">
 		<h2><strong>Projects</strong></h2>
+			
+		
+			<p style="color:gray">Spring 2018</p>
+			<h3><button class="arrow"><i class="fa fa-chevron-right" aria-hidden="true"></i></button>Intelligent Restaurant Recommender Bot using AWS</h3>
+			<div class="expanded-info">Using the Yelp dataset, and AWS services such as S3, EC2, and Lambda, a team of four students that I was a part of built an artificially intelligent bot to reccommend restaurants to users. For COMSE6998 Cloud Computing and Big Data Spring 2018. <a href="https://s3.amazonaws.com/shenzhizhang.chatbot/index.html"><button><i style="color:blue" class="fa fa-code fa-2x"></i></button></a></div>
 
+			<p style="color:gray">Summer 2017</p>
+			<h3><button class="arrow"><i class="fa fa-chevron-right" aria-hidden="true"></i></button>Girls Who Code Web Applications</h3>
+			<div class="expanded-info">As a Teaching Assistant for <mark>Girls Who Code</mark> Summer Immersion Program, I supported 4 teams in executing final web-based projects. Examples of <mark>Javascript</mark> Projects can be found <a href="http://www.columbia.edu/~sj2735/">here</a> and examples of <mark>Django</mark> based projects can be found <a href="https://github.com/Amaiyyyaaa/Memetropolis">here</a>.</div>
+
+			
 			<p style="color:gray">Fall 2017</p>
 			<h3><button class="arrow"><i class="fa fa-chevron-right" aria-hidden="true"></i></button> Simple Convolution Neural Network in Python </h3>
-			<div class="expanded-info">An image classification <mark>neural network</mark> was built using <mark>Keras</mark> and Google <mark>TensorFlow</mark> Libraries in <mark>Python</mark>. Multi-class classification executed with an accuracy of 85% and binary classificationwith 99% accuracy. For COMSW4701 Artificial Intelligence Fall 2017. <a href="http://github.com/sejaljain/coms4701"><button><i style="color:blue" class="fa fa-code fa-2x"></i></button></a></div>
+			<div class="expanded-info">I built an image classification <mark>neural network</mark> using <mark>Keras</mark> and Google <mark>TensorFlow</mark> Libraries in <mark>Python</mark>. Multi-class classification executed with an accuracy of 85% and binary classificationwith 99% accuracy. For COMSW4701 Artificial Intelligence Fall 2017. <a href="http://github.com/sejaljain/coms4701"><button><i style="color:blue" class="fa fa-code fa-2x"></i></button></a></div>
 
-			<h3><button class="arrow"><i class="fa fa-chevron-right" aria-hidden="true"></i></button> Revenue Management System Product Management </h3>
-
-			<div class="expanded-info">Worked on a Revenue Management system for Ad Sales Strategic Planning at <mark>Turner Broadcasting</mark> to extract business insights from high volume data. I gathered requirements, wrote user stories and acceptance criteria, performed high-level story mapping, assisted with UATs, product backlog grooming, targeted discrepancies in <mark>MySQL</mark> stored procedures, and assisted Product Owner with supporting wider portfolio of sales solution products. I was collaborating closely with developers to create deliverables in an <mark>Agile</mark> environment as part of a semester long internship.</div>
 
 			<p style="color:gray">Summer 2017</p>
 			<h3><button class="arrow"><i class="fa fa-chevron-right" aria-hidden="true"></i></button>Girls Who Code Web Applications</h3>
@@ -122,19 +132,22 @@ ul {
 
 			<p style="color:gray">Spring 2017</p>
 			<h3><button class="arrow"><i class="fa fa-chevron-right" aria-hidden="true"></i></button> Web Server in C </h3>
-			<div class="expanded-info">A <mark>web server</mark> was created from scratch in <mark>C</mark> using <mark>TCP/IP protocol</mark> and HTTP 1.0 protocol to read and write requests. The server hosted a static HTML webpage that was used for a simple databse lookup function. For COMSW3157 Advanced Programming Spring 2016. <a href="http://github.com/sejaljain/web-server"><button><i style="color:blue" class="fa fa-code fa-2x"></i></button></a></div>
+			<div class="expanded-info">I created a <mark>web server</mark> from scratch in <mark>C</mark> using <mark>TCP/IP protocol</mark> and HTTP 1.0 protocol to read and write requests. The server hosted a static HTML webpage that was used for a simple databse lookup function. For COMSW3157 Advanced Programming Spring 2016. <a href="http://github.com/sejaljain/web-server"><button><i style="color:blue" class="fa fa-code fa-2x"></i></button></a></div>
 
 
 			<h3><button class="arrow"><i class="fa fa-chevron-right" aria-hidden="true"></i></button> Neighborhood News Web App </h3>
-			<div class="expanded-info">A web application to stimulate community engagement through incereased access to hyperlocal news was built. Using <mark>Flask</mark>, <mark>Firebase</mark>, NYC Open Data API, and the New York Times API, a successful prototype for presenting news for a neighborhood based on user location and preferences was created. Part of <mark>Application Development Initiative</mark> at Columbia. <a href="http://github.com/sejaljain/tara"><button><i style="color:blue" class="fa fa-code fa-2x"></i></button></a></div>
+			<div class="expanded-info">In a team of 4 students, I built a web application to stimulate community engagement through incereased access to hyperlocal news. Using <mark>Flask</mark>, <mark>Firebase</mark>, NYC Open Data API, and the New York Times API, a successful prototype for presenting news for a neighborhood based on user location and preferences was created. Part of <mark>Application Development Initiative</mark> at Columbia. <a href="http://github.com/sejaljain/tara"><button><i style="color:blue" class="fa fa-code fa-2x"></i></button></a></div>
 
 			<p style="color:gray">Fall 2016</p>
 			<h3><button class="arrow"><i class="fa fa-chevron-right" aria-hidden="true"></i></button> Swipes iOS App</h3>
-			<div class="expanded-info">A prototype <mark>mobile app</mark> to tackle food insecuirty on Columbia University's campus was built using <mark>React Native</mark> (Javascript) and <mark>Firebase</mark>. The app provides a forum for students to donate or request meal swipes into dining hall locations on campus as many students often have extra meal swipes while other do not have enough. Part of <mark>Application Development Initiative</mark> at Columbia. <a href="http://github.com/sejaljain/swipes"><button><i style="color:blue" class="fa fa-code fa-2x"></i></button></a></div>
+			<div class="expanded-info">In a team of 4 students, I built a prototype <mark>mobile app</mark> to tackle food insecuirty on Columbia University's campus using <mark>React Native</mark> (Javascript) and <mark>Firebase</mark>. The app provides a forum for students to donate or request meal swipes into dining hall locations on campus as many students often have extra meal swipes while other do not have enough. Part of <mark>Application Development Initiative</mark> at Columbia. <a href="http://github.com/sejaljain/swipes"><button><i style="color:blue" class="fa fa-code fa-2x"></i></button></a></div>
+
+			<h3><button class="arrow"><i class="fa fa-chevron-right" aria-hidden="true"></i></button>Columbia Taal Website</h3>
+			<div class="expanded-info">I built a wesbite using HTML/CSS/JS for a collegiate dance team in an effort to centralize information and recruiting efforts targeted towards new members.<a href="http://www.columbia.edu/cu/taal/"><button><i style="color:blue" class="fa fa-code fa-2x"></i></button></a></div>
 
 			<p style="color:gray">Summer 2016</p>
 			<h3><button class="arrow"><i class="fa fa-chevron-right" aria-hidden="true"></i></button> Telematics Web Dashboard </h3>
-			<div class="expanded-info">An <mark>IoT</mark> telematics dashboard using MEAN stack framework <mark>(MySQL, ExpressJS, AngularJS, NodeJS)</mark> was created for <mark>Citizengage</mark> (waste management startup based in Banagalore, India) to improve logistics and process <mark>real-time data</mark> from hardware fitted onto fleet of waste collection trucks. This dashboard was also used to optimize collection routes for waste collection fleet and to map customer locations using the <mark>Mapbox API</mark>. Part of <mark>Full Stack Engineering</mark> Internship at Citizengage. <a href="https://github.com/sejaljain/CZG---Live-Tracking-Page"><button><i style="color:blue" class="fa fa-code fa-2x"></i></button></a></div>
+			<div class="expanded-info">I built an <mark>IoT</mark> telematics dashboard using MEAN stack framework <mark>(MySQL, ExpressJS, AngularJS, NodeJS)</mark> for <mark>Citizengage</mark> (waste management startup based in Banagalore, India) to improve logistics and process <mark>real-time data</mark> from hardware fitted onto fleet of waste collection trucks. This dashboard was also used to optimize collection routes for waste collection fleet and to map customer locations using the <mark>Mapbox API</mark>. Part of <mark>Full Stack Engineering</mark> Internship at Citizengage. <a href="https://github.com/sejaljain/CZG---Live-Tracking-Page"><button><i style="color:blue" class="fa fa-code fa-2x"></i></button></a></div>
 
 			<p style="color:gray">2015</p>
 
