--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ ul {
 		<a href="http://linkedin.com/in/sejaljain"><button><i class="fa fa-linkedin fa-lg"></i></button></a>
 		<a href="http://github.com/sejaljain"><button><i class="fa fa-github fa-lg"></i></button></a>
 		<a href="https://open.spotify.com/user/1296451128"><button><i class="fa fa-spotify fa-lg"></i></button></a>
-		<a href="./SJ_Resume.pdf"><button><i class="fa fa-file-text-o fa-lg"></i></button></a>
+		<a href="./SJ_Resume_0918.pdf"><button><i class="fa fa-file-text-o fa-lg"></i></button></a>
 		<p>Columbia University<br>Fu Foundation School of Engineering<br>B.S. Computer Science 2019
 		<br>
 		
@@ -101,6 +101,14 @@ ul {
 		<ul>C/C++</ul>
 		<ul>MySQL</ul>
 		<ul>Git</ul>
+	</div>
+		
+	</div>
+
+		<h3>Leadership Positions <button class="arrow"><i class="fa fa-chevron-right" aria-hidden="true"></i></button></h3>
+		<div class="expanded-info">
+		<ul>Program Manager, Engineers Without Borders - Columbia University Ghana Program</ul>
+		<ul>Team Manager, Columbia Taal South Asian Dance Team</ul>
 	</div>
 	
 	</div>
