--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ ul {
 		<ul>Advanced Programming in C/C++</ul>
 		<ul>Computer Science Theory</ul>
 		<ul>Data Structures in Java</ul>
-	</div>
+		</div>
 
 		<h3>Technical Skills <button class="arrow"><i class="fa fa-chevron-right" aria-hidden="true"></i></button></h3>
 		<div class="expanded-info">
@@ -101,15 +101,17 @@ ul {
 		<ul>C/C++</ul>
 		<ul>MySQL</ul>
 		<ul>Git</ul>
-	</div>
+		</div>
+		
+		<h3>Leadership Positions <button class="arrow"><i class="fa fa-chevron-right" aria-hidden="true"></i></button></h3>
+		<div class="expanded-info">
+		<ul>Program Manager, <a href="ghana.cuewb.org">Engineers Without Borders - Columbia University Ghana Program</a></ul>
+			<ul>Team Manager, <a href="columbia.edu/cu/taal">Columbia Taal South Asian Dance Team</a></ul>
+		</div>
 		
 	</div>
 
-		<h3>Leadership Positions <button class="arrow"><i class="fa fa-chevron-right" aria-hidden="true"></i></button></h3>
-		<div class="expanded-info">
-		<ul>Program Manager, Engineers Without Borders - Columbia University Ghana Program</ul>
-		<ul>Team Manager, Columbia Taal South Asian Dance Team</ul>
-	</div>
+		
 	
 	</div>
 
